--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TP Global - Epic Experiences, Shaping Culture</title>
-    <meta name="description" content="TP Global creates epic experiences that shape culture. A creative agency with global presence in Hong Kong, Dubai, Zurich, Amsterdam, Los Angeles, and Shanghai." />
-    <meta name="author" content="TP Global" />
 
-    <meta property="og:title" content="TP Global - Epic Experiences, Shaping Culture" />
-    <meta property="og:description" content="TP Global creates epic experiences that shape culture. A creative agency with global presence across 6 cities worldwide." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TP Tiles Centre - Quality Tiles & Roofing Solutions</title>
+  <meta name="description"
+    content="TP Tiles Centre (TP Metals and Roofings) - Premium tiles, metals, and roofing solutions in Kalpetta, Wayanad. Quality products for your construction needs." />
+  <meta name="author" content="TP Tiles Centre" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="TP Tiles Centre - Quality Tiles & Roofing Solutions" />
+  <meta property="og:description"
+    content="TP Tiles Centre (TP Metals and Roofings) - Premium tiles, metals, and roofing solutions in Kalpetta, Wayanad. Quality products for your construction needs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
